@@ -16,10 +16,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
-    <junit.jupiter.version>5.9.0</junit.jupiter.version>
+    <junit.jupiter.version>5.9.2</junit.jupiter.version>
     <junit.platform.version>1.9.0</junit.platform.version>
     <log4j2.version>2.19.0</log4j2.version>
-    <jackson.version>2.14.0</jackson.version>
+    <jackson.version>2.14.2</jackson.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -91,12 +91,12 @@
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.9</version>
+      <version>2.10.1</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20220924</version>
+      <version>20230227</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -193,12 +193,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
-      <version>2.14.0</version>
+      <version>2.14.2</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
-      <version>2.14.0</version>
+      <version>2.14.2</version>
     </dependency>
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
@@ -208,7 +208,7 @@
     <dependency>
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
-      <version>1.15.3</version>
+      <version>1.15.4</version>
     </dependency>
     <dependency>
       <groupId>org.skyscreamer</groupId>
@@ -267,12 +267,12 @@
     <dependency>
       <groupId>org.dhatim</groupId>
       <artifactId>fastexcel</artifactId>
-      <version>0.14.0</version>
+      <version>0.15.2</version>
     </dependency>
     <dependency>
       <groupId>org.dhatim</groupId>
       <artifactId>fastexcel-reader</artifactId>
-      <version>0.14.0</version>
+      <version>0.15.2</version>
     </dependency>
   </dependencies>
   <build>
@@ -293,6 +293,15 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-opens java.base/java.time=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
